fix: screen flicker on transitions

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+/* src/global.css */
 /* default to light mode, but respect user's browser preference */
 @import url('https://fonts.googleapis.com/css?family=Inter:700|Inter:400');
 
@@ -45,7 +46,6 @@
 body {
   background-color: var(--background);
   color: var(--text);
-  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 a {
